# hatch-c

./: README.md  pyproject.toml
.github/workflows/: build.yml
licenses/: hatch_cpp_LICENSE.txt
src/hatch_c/: config.py  extension.py  hooks.py  plugin.py  utils.py
