[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build]
artifacts = []

[tool.hatch.build.sources]
src = "/"

[tool.hatch.build.targets.sdist]
packages = ["hatch_c"]

[tool.hatch.build.targets.wheel]
packages = ["hatch_c"]

[project]
name = "hatch-c"
authors = [{ name = "Zach Burnett", email = "zburnett@stsci.edu" }]
description = "Hatch plugin for C builds"
readme = "README.md"
license-files = ["licenses/LICENSE.txt", "licenses/hatch_cpp_LICENSE.txt"]
requires-python = ">=3.10"
dynamic = ["version"]

dependencies = ["hatchling", "pydantic"]

[project.entry-points.hatch]
c = "hatch_c.hooks"

[project.urls]
repository = "https://github.com/zacharyburnett/hatch-c"
